--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,42 +1,44 @@
 @import "../../styles/abstracts";
 
 .hero {
-  min-height: 60vh;
-  padding: 8px var(--section-horizontal-padding) 50px;
-  background-color: var(--black);
-  color: var(--white);
+	min-height: calc(100vh - var(--header-height));
+	padding: 8px var(--section-horizontal-padding) 50px;
+	background-color: var(--black);
+	color: var(--white);
 
-  @media screen and (min-width: #{$screen-large}) {
-    padding: 50px var(--section-horizontal-padding) 140px;
-  }
+	@media screen and (min-width: #{$screen-large}) {
+		min-height: 50vh;
+		padding: 50px var(--section-horizontal-padding) 140px;
+		padding: 50px var(--section-horizontal-padding) 55px;
+	}
 }
 
 .description {
-  p {
-    font-size: var(--lg-text);
-    line-height: 1;
-    opacity: 0;
-    transform: translate3d(0, 25px, 0);
-    animation: fade-in 0.45s ease-out 2.4s forwards;
+	p {
+		font-size: var(--lg-text);
+		line-height: 1;
+		opacity: 0;
+		transform: translate3d(0, 25px, 0);
+		animation: fade-in 0.45s ease-out 2.4s forwards;
 
-    @media screen and (min-width: #{$screen-large}) {
-      transform: translate3d(0, 50px, 0);
-      animation-delay: 0.4s;
-    }
+		@media screen and (min-width: #{$screen-large}) {
+			transform: translate3d(0, 50px, 0);
+			animation-delay: 0.4s;
+		}
 
-    &:nth-last-of-type(1) {
-      animation-delay: 2.55s;
+		&:nth-last-of-type(1) {
+			animation-delay: 2.55s;
 
-      @media screen and (min-width: #{$screen-large}) {
-        animation-delay: 0.55s;
-      }
-    }
-  }
+			@media screen and (min-width: #{$screen-large}) {
+				animation-delay: 0.55s;
+			}
+		}
+	}
 }
 
 @keyframes fade-in {
-  to {
-    opacity: 1;
-    transform: translate3d(0, 0, 0);
-  }
+	to {
+		opacity: 1;
+		transform: translate3d(0, 0, 0);
+	}
 }
