--- a/src/components/Team/Team.module.scss
+++ b/src/components/Team/Team.module.scss
@@ -1,23 +1,23 @@
 @import "../../styles/abstracts";
 
 .team {
-  padding: 45px var(--section-horizontal-padding) 60px;
-  background-color: var(--black);
-  color: var(--white);
+	padding: 45px var(--section-horizontal-padding) 60px;
+	background-color: var(--black);
+	color: var(--white);
 
-  @media screen and (min-width: #{$screen-large}) {
-    padding: 215px var(--section-horizontal-padding) 80px;
-  }
+	@media screen and (min-width: #{$screen-large}) {
+		padding: 160px var(--section-horizontal-padding) 80px;
+	}
 }
 
 .members {
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  grid-column-gap: 20px;
-  grid-row-gap: 20px;
+	display: grid;
+	grid-template-columns: repeat(1, 1fr);
+	grid-column-gap: 20px;
+	grid-row-gap: 20px;
 
-  @media screen and (min-width: #{$screen-large}) {
-    grid-template-columns: repeat(4, 1fr);
-    grid-row-gap: 58px;
-  }
+	@media screen and (min-width: #{$screen-large}) {
+		grid-template-columns: repeat(4, 1fr);
+		grid-row-gap: 58px;
+	}
 }
